--- a/porcheWebsite2/index.html
+++ b/porcheWebsite2/index.html
@@ -20,6 +20,7 @@
       <a href="#" class="SideNavBtns">Services</a>
       <a href="#" class="SideNavBtns">Clients</a>
       <a href="#" class="SideNavBtns">Contact</a>
+      <a href="#" class="SideNavBtns">Contact</a>
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     </div>
     <button class="sideBtn" onclick="openNav()"class="fa-solid fa-bars fa-2xl">&#9776;</button>
